[package]
name = "idf-env"
version = "1.3.0"
authors = ["Juraj Michalek <juraj.michalek@espressif.com>"]
edition = "2018"

[dependencies]
anyhow = "*"
clap = { version = "2.33.3" }
clap-nested = "*"
dirs = "*"
flate2 = "1.0.24"
git2 = "0.15.0"
guess_host_triple = "0.1.3"
json = "*"
md5 = "*"
num_cpus = "*"
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
# 7z support disabled until BCJ support added to decompression in the crate: https://github.com/dyz1990/sevenz-rust/issues/1
sevenz-rust = "0.1.1"
tar = "0.4.37"
tokio = { version = "1.15.0", features = ["full"] }
walkdir = "*"
wmi = "*"
widestring = "1.0.2"
winapi = { version = "*", features = [
    "setupapi",
    "handleapi",
    "processthreadsapi",
    "winnt",
    "securitybaseapi",
    "impl-default",
    "shellapi",
    "winuser",
] }
zip = "*"
xz2 = "0.1.6"
espflash = "1.6.0"
console = "0.15.1"
tempfile = "3.3.0"
log = "0.4.17"
simplelog = "0.12.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"

[[bin]]
name = "idf-env"
path = "src/idf_env.rs"
