[package]
name = "idf-env-gui"
version = "2.0.0"
authors = ["Juraj Michalek <juraj.michalek@espressif.com>"]
edition = "2018"

[dependencies]
anyhow = "*"
clap = "*"
chrono = "0.4.19"
dirs = "*"
flate2 = "1.0.22"
git2 = "0.13.25"
guess_host_triple = "0.1.3"
json = "*"
md5 = "*"
num_cpus = "*"
reqwest = "*"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.78" }
tar = "0.4.37"
tokio = { version = "1.15.0", features = ["full"] }
walkdir = "*"
zip = "*"
xz2 = "0.1.6"
idf-env-core = { path = "../idf-env-core" }
wry = "0.13.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "*", features = ["setupapi", "handleapi", "processthreadsapi", "winnt", "securitybaseapi", "impl-default", "shellapi"] }
wmi = "*"
widestring = "*"
winreg = "0.7"

[[bin]]
name = "idf-env-gui"
path = "src/main.rs"
