
[package]
name = "idf-env-core"
version = "2.0.0"
authors = ["Juraj Michalek <juraj.michalek@espressif.com>"]
edition = "2018"

[dependencies]
anyhow = "*"
clap = "*"
dirs = "*"
flate2 = "1.0.22"
git2 = "0.13.25"
guess_host_triple = "0.1.3"
json = "*"
md5 = "*"
num_cpus = "*"
reqwest = "*"
tar = "0.4.37"
tokio = { version = "1.15.0", features = ["full"] }
walkdir = "*"
zip = "*"
xz2 = "0.1.6"

[target.'cfg(windows)'.dependencies]
once_cell = "1.3.1"
native-windows-gui = { version = "1.0.12", features = ["high-dpi"] }
winapi = { version = "*", features = ["setupapi", "handleapi", "processthreadsapi", "winnt", "securitybaseapi", "impl-default", "shellapi"] }
wmi = "*"
widestring = "*"
winreg = "0.7"
web-view = { git = "https://github.com/Boscop/web-view.git", features = ["edge"] }

[target.'cfg(unix)'.dependencies]
web-view = { git = "https://github.com/Boscop/web-view.git" }

